--- a/Layout1/src/index.html
+++ b/Layout1/src/index.html
@@ -10,23 +10,23 @@
 
 <body>
     <div style="height: 200vh;"></div>
-    <image-text-section class="image-text-section">
-        <div class="image-text-section__item">
+    <custom-element class="main-section">
+        <div class="main-section__item">
             <img src="../public/images/image-hero.jpg" alt="Woman posing in a hero banner"
-                class="image-text-section__item-image">
+                class="main-section__item-image">
         </div>
-        <div class="image-text-section__item">
-            <div class="image-text-section__item-container">
-                <div class="image-text-section__item-text">
-                    <span class="image-text-section__item-heading">Handcrafted and Responsibly Sourced</span>
-                    <p class="image-text-section__item-description1">On the other hand, we denounce with righteous
+        <div class="main-section__item">
+            <div class="main-section__item-container">
+                <div class="main-section__item-text">
+                    <span class="main-section__item-heading">Handcrafted and Responsibly Sourced</span>
+                    <p class="main-section__item-description1">On the other hand, we denounce with righteous
                         indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the
                         moment,
                         so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and
                         equal blame belongs to those who fail in their duty through weakness of will, which is the same as
                         saying through shrinking from toil and pain.
                     </p>
-                    <p class="image-text-section__item-description2">On the other hand, we denounce with righteous
+                    <p class="main-section__item-description2">On the other hand, we denounce with righteous
                         indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the
                         moment,
                         so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and
@@ -34,10 +34,10 @@
                         saying through shrinking from toil and pain.
                     </p>
                 </div>    
-                <button class="image-text-section__item-btn-toggle">Learn more</button>
+                <button class="main-section__item-btn-toggle">Learn more</button>
             </div>      
         </div>
-    </image-text-section>
+    </custom-element>
     <div style="height: 200vh;"></div>
     <script src="main.js"></script>
 </body>
