--- a/layout1/src/index.html
+++ b/layout1/src/index.html
@@ -12,7 +12,7 @@
     <div style="height: 200vh;"></div>
     <custom-element class="main-section">
         <div class="main-section__item">
-            <img src="../public/images/image-hero.jpg" alt="Woman posing in a hero banner"
+            <img src="./images/image-hero.jpg" alt="Woman posing in a hero banner"
                 class="main-section__item-image">
         </div>
         <div class="main-section__item">
