--- a/layout3/src/index.html
+++ b/layout3/src/index.html
@@ -16,26 +16,26 @@
             <div class="carousel carousel-active swiper-container">
                 <div class="carousel__wrapper swiper-wrapper">
                     <div class="carousel__slide swiper-slide">
-                        <img src="../public/images/carousel-img1.jpg" alt="Image 1" class="carousel__image">
+                        <img src="./images/carousel-img1.jpg" alt="Image 1" class="carousel__image">
                     </div>
                     <div class="carousel__slide swiper-slide">
-                        <img src="../public/images/carousel-img2.jpg" alt="Image 2" class="carousel__image">
+                        <img src="./images/carousel-img2.jpg" alt="Image 2" class="carousel__image">
                     </div>
                     <div class="carousel__slide swiper-slide">
-                        <img src="../public/images/carousel-img3.jpg" alt="Image 3" class="carousel__image">
+                        <img src="./images/carousel-img3.jpg" alt="Image 3" class="carousel__image">
                     </div>
                     <div class="carousel__slide swiper-slide">
-                        <img src="../public/images/carousel-img4.jpg" alt="Image 3" class="carousel__image">
+                        <img src="./images/carousel-img4.jpg" alt="Image 3" class="carousel__image">
                     </div>
                     <div class="carousel__slide swiper-slide">
-                        <img src="../public/images/carousel-img3.jpg" alt="Image 3" class="carousel__image">
+                        <img src="./images/carousel-img3.jpg" alt="Image 3" class="carousel__image">
                     </div>
                 </div>
                 <div class="carousel__button-next swiper-button-next">
-                    <img src="../public/images/arrow-left.svg" alt="Icon 1">
+                    <img src="./images/arrow-left.svg" alt="Icon 1">
                 </div>
                 <div class="carousel__button-prev swiper-button-prev">
-                    <img src="../public/images/arrow-right.svg" alt="Icon 1">
+                    <img src="./images/arrow-right.svg" alt="Icon 1">
                 </div>
             </div>
         </div>
